public static class Constants
{
    public const string ANIM_IDLE = "idle";
    public const string ANIM_RUN = "run";
    public const string ANIM_ATTACK = "attack";
    public const string ANIM_DEAD = "dead";
    public const string ANIM_DANCE = "dance";
    public const string ANIM_ULTI = "ulti";
    public const string ANIM_VICTORY = "victory";

    public const string PP_IS_UNLOCK_ITEM = "IsUnlockItem";
    public const string PP_CURRENT_ITEM = "CurrentItem";
    public const string PP_PLAYER_NAME = "PlayerName";
    public const string PP_CURRENT_GOLD = "CurrentGold";
}